# simple-webscan

./: .gitignore  README.md  config.yml  pyproject.toml  requirements.txt  run.sh
simple_webscan/: ScannerModels.py  __main__.py  app.py  config.py  main.py  scanner.py  state.py
simple_webscan/templates/: scanner_home.html  scanner_list.html  scanning.html  scanoptions.html  scanpage.html
src/: app.py  config.py  scanner.py
src/static/css/: breadcrumb.css  main.css
src/templates/: index.html  scan_backside.html  scanner_home.html  scanoptions.html  scanpage.html  updating_scanners.html
